@@ -1,3 +1,8 @@
+Mon Aug 30 10:23:49 2010  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: Patch from Vincent Untz to fix access to sealed
+	  vte structure members
+
 Tue Jun 29 11:38:38 2010  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: Add SurfacePlotVariableNames and some fixes
